--- a/HomeBudget.App/Resources/Styles/Styles.xaml
+++ b/HomeBudget.App/Resources/Styles/Styles.xaml
@@ -127,6 +127,7 @@
         TargetType="Frame">
         <Setter Property="Background" Value="{StaticResource Gray100}" />
         <Setter Property="BorderColor" Value="{StaticResource Gray100}" />
+        <Setter Property="Margin" Value="0" />
     </Style>
 
     <!--  BUTTONS  -->
@@ -173,6 +174,8 @@
         <Setter Property="BorderColor" Value="{StaticResource Primary}" />
         <Setter Property="BorderWidth" Value="3" />
         <Setter Property="FontFamily" Value="MaterialIcons" />
+        <Setter Property="MinimumHeightRequest" Value="44" />
+        <Setter Property="MinimumWidthRequest" Value="44" />
         <Setter Property="TextColor" Value="{StaticResource Primary}" />
         <Setter Property="FontSize" Value="{StaticResource BigFontSize}" />
     </Style>
@@ -293,7 +296,6 @@
         <Setter Property="BorderWidth" Value="0" />
         <Setter Property="CornerRadius" Value="8" />
         <Setter Property="Padding" Value="14,10" />
-        <Setter Property="Margin" Value="0,5,0,5" />
         <Setter Property="MinimumHeightRequest" Value="44" />
         <Setter Property="MinimumWidthRequest" Value="44" />
         <Setter Property="VisualStateManager.VisualStateGroups">
@@ -323,7 +325,6 @@
         <Setter Property="BorderWidth" Value="0" />
         <Setter Property="CornerRadius" Value="8" />
         <Setter Property="Padding" Value="14,10" />
-        <Setter Property="Margin" Value="0,5,0,5" />
         <Setter Property="MinimumHeightRequest" Value="44" />
         <Setter Property="MinimumWidthRequest" Value="44" />
         <Setter Property="VisualStateManager.VisualStateGroups">
