--- a/HomeBudget.App/Views/ContentViews/Main/RegisterContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/Main/RegisterContentView.xaml
@@ -8,18 +8,18 @@
     xmlns:mainViews="clr-namespace:HomeBudget.App.Views.ContentViews.Main"
     x:DataType="main:RegisterContentViewModel">
 
-    <Grid>
+    <Grid IsEnabled="True" IsVisible="True">
         <VerticalStackLayout Spacing="10">
-            <Frame Padding="10">
+            <Border Padding="10">
                 <VerticalStackLayout Spacing="10">
-                    <Frame Margin="0" Style="{StaticResource SecondaryEntryFrame}">
+                    <Border Margin="0" Style="{StaticResource SecondaryEntryFrame}">
                         <Entry
                             Placeholder="Email"
                             Style="{StaticResource DarkMediumEntry}"
                             Text="{Binding RegisterModel.Email}" />
-                    </Frame>
+                    </Border>
 
-                    <Frame Margin="0" Style="{StaticResource SecondaryEntryFrame}">
+                    <Border Margin="0" Style="{StaticResource SecondaryEntryFrame}">
                         <Grid ColumnDefinitions="*,Auto">
                             <Entry
                                 IsPassword="{Binding IsPasswordVisible}"
@@ -32,9 +32,9 @@
                                 Style="{StaticResource IconFlexButton}"
                                 Text="{Binding PasswordVisibleIcon}" />
                         </Grid>
-                    </Frame>
+                    </Border>
 
-                    <Frame Margin="0" Style="{StaticResource SecondaryEntryFrame}">
+                    <Border Margin="0" Style="{StaticResource SecondaryEntryFrame}">
                         <Grid ColumnDefinitions="*,Auto">
                             <Entry
                                 IsPassword="{Binding IsRepeatPasswordVisible}"
@@ -47,7 +47,7 @@
                                 Style="{StaticResource IconFlexButton}"
                                 Text="{Binding RepeatPasswordVisibleIcon}" />
                         </Grid>
-                    </Frame>
+                    </Border>
 
                     <VerticalStackLayout Spacing="5" VerticalOptions="Start">
                         <Label
@@ -73,7 +73,7 @@
                         Style="{StaticResource PrimaryButton}"
                         Text="Rejestruj" />
                 </VerticalStackLayout>
-            </Frame>
+            </Border>
         </VerticalStackLayout>
         <controls:ActivityIndicatorFullPageContentView BindingContext="{Binding}" />
     </Grid>
